--- a/thesis/appb.tex
+++ b/thesis/appb.tex
@@ -1,19 +1,27 @@
-\chapter{Figures}
+\chapter{Alignment Visualization of Violin 1 part in K.160}\label{appb}
 
-\vspace*{-3in}
-
-\begin{figure}
-\vspace{2.4in}
-\caption{}
-\label{}
-\end{figure}
 \clearpage
-\newpage
 
-\begin{figure}
-\vspace{2.4in}
-\caption{}
-\label{}
+\begin{figure}[H]
+\centering
+\includegraphics[width =.95\textwidth]{K160_MIDI_Violin_1-1}
+\caption{Post-alignment visualization of the MIDI Violin 1 part in K.160.}
+\label{fig:k160postalignv1midi}
 \end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width =.95\textwidth]{K160_OMR_Violin_1-1}
+\caption{Post-alignment visualization of the OMR Violin 1 part in K.160.}
+\label{fig:k160postalignv1omr}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width =.95\textwidth]{K160_Violin_1_Part_OMR_Enharmonic_Fixer-1}
+\caption{Post-enharmonic and pitch fixing visualization of the OMR Violin 1 part in K.160.}
+\label{fig:k160postfixv1}
+\end{figure}
+
 \clearpage
 \newpage
