--- a/thesis/chap1.tex
+++ b/thesis/chap1.tex
@@ -5,11 +5,10 @@
 %% \files=
 %% prompt when you run the file main.tex through LaTeX.
 \chapter{Introduction}
-%% ---- MY NEW INTRO ----
 
 \section{Motivation}
 \subsection{Why Compare Music?}
-Comparing music is seminal to the field of Music Information Retrieval (MIR). Questions such as ``Is this piece of music plagiarized from Bach?", ``Is this rhythmically more similar to Philip Glass or Scott Joplin? Melodically?", ``Is this newly discovered musical transcription an entirely new folk song or just a variation of an old one?" can be answered by comparing the pieces in question and applying a quantitative metric to determine that, ``Yes, this piece quotes Bach more than other pieces of similar time period and style", or, ``This piece has 74\% melodic similarity to Joplin's repertoire, 10\% similarity to Glass, but rhythmically shares 64\% similarity with Glass and only 12\% with Joplin.''
+Comparing music is seminal to the field of Music Information Retrieval (MIR). Questions such as ``Is this piece of music plagiarized from Bach?'', ``Is this rhythmically more similar to Philip Glass or Scott Joplin? Melodically?'', ``Is this newly discovered musical transcription an entirely new folk song or just a variation of an old one?'' can be answered by comparing the pieces in question and applying a quantitative metric to determine that, ``Yes, this piece quotes Bach more than other pieces of similar time period and style'', or, ``This piece has 74\% melodic similarity to Joplin's repertoire, 10\% similarity to Glass, but rhythmically shares 64\% similarity with Glass and only 12\% with Joplin.'''
 
 Computational music comparison, a subset of classical computer science string comparison, comes in many forms and each domain has slightly different specifications for alignment and comparison. 
 
