--- a/thesis/main.bib
+++ b/thesis/main.bib
@@ -11,14 +11,13 @@
 }
 
 @misc{seqalign,
-  title = {Sequence Alignment and Dynamic Programming},
-  author={6.096 ? Algorithms for Computational Biology, class at MIT},
+  title = {{Sequence Alignment and Dynamic Programming, Lecture notes for 6.096}},
+  author={Algorithms for Computational Biology},
   howpublished = {\url{https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-096-algorithms-for-computational-biology-spring-2005/lecture-notes/lecture5_newest.pdf}},
-  note = {Accessed: 2016-10-01}
 }
 
 @article{byrd-testbed, 
-  title        =           {Towards a Standard Testbed for Optical Music Recognition: Definitions, Metrics, and Page Images}, 
+  title        =           {{Towards a Standard Testbed for Optical Music Recognition: Definitions, Metrics, and Page Images}}, 
   volume   =         {44.3}, 
   url     =        {http://homes.soic.indiana.edu/donbyrd/Papers/OMRStandardTestbed_figinline.pdf}, 
   journal   =         {Journal of New Music Research}, 
@@ -29,7 +28,7 @@
 	
 @inproceedings{church,
   author        ={Church, Maura and Cuthbert, Michael Scott},
-  title         ={Improving Rhythmic Transcriptions via Probability Models Applied Post-OMR},
+  title         ={{Improving Rhythmic Transcriptions via Probability Models Applied Post-{OMR}}},
   crossref =     {ismir},
   pages =        {643-- 647}
 }
@@ -40,13 +39,13 @@
   booktitle =    "Proceedings of the 15th Conference of the International Society for Music Information Retrieval ",
   publisher =    {ISMIR},
   venue =        {Taipei, Taiwan},
-  month =        10,
+  month =        {10,},
   year =         {2014}
 }
 
 @inproceedings{peachnote,
   author        ={Viro, Vladimir},
-  title         ={Peachnote: Music Score Search and Analysis Platform},
+  title         ={{Peachnote: Music Score Search and Analysis Platform}},
   crossref =     {ismir12},
   pages =        {359-- 362}
 }
@@ -57,7 +56,7 @@
   booktitle =    "Proceedings of the 12th Conference of the International Society for Music Information Retrieval ",
   publisher =    {ISMIR},
   venue =        {Miami, Florida },
-  month =        10,
+  month =        {10,},
   year =         {2014}
 }
 
@@ -70,16 +69,16 @@
  }
  
  @article{temperley, 
-  title        =           {An Algorithm for Harmonic Analysis}, 
+  title        =           {{An Algorithm for Harmonic Analysis}}, 
   volume   =         {15.1}, 
-  journal   =         { Music Perception: An Interdisciplinary Journal}, 
+  journal   =         {Music Perception: An Interdisciplinary Journal}, 
   author   =     {Temperley, David}, 
   year  = {1997}, 
-  pages={31--68}
+  pages={31-- 68}
 }
  
 @article{hewlett, 
-  title        =           {A Base-40 Number-line Representation of Musical Pitch Notation}, 
+  title        =           {{A Base-40 Number-line Representation of Musical Pitch Notation}}, 
   volume   =         {4}, 
   url     =        {http://www.ccarh.org/publications/reprints/base40/}, 
   journal   =         {Musikometrika}, 
@@ -89,7 +88,7 @@
 }
 
 @article{rebelo, 
-  title={Optical music recognition: state-of-the-art and open issues}, 
+  title={{Optical Music Recognition - State-of-the-Art and Open Issues}}, 
   volume={1}, DOI={10.1007/s13735-012-0004-6}, 
   number={3}, 
   journal={International Journal of Multimedia Information Retrieval}, 
@@ -107,13 +106,13 @@
  
 @misc{imslp,
   key = {IMSLP},
-  title = {IMSLP/Petrucci Library Free Public Domain Sheet Music},
+  title = {{IMSLP/Petrucci Library Free Public Domain Sheet Music}},
   howpublished = {\url{http://imslp.org/}},
   note = {Accessed: 2015-10-10}
 }
  
 @misc{k525,
-  title = {Eine kleine Nachtmusik, K. 525},
+  title = {Eine {Kleine} {Nachtmusik}, {K}. 525},
   author={Mozart, Wolfgang Amadeus},
   howpublished = {\url{http://ks.petruccimusiclibrary.org/files/imglnks/usimg/5/57/IMSLP01776-Mozart_EineKleineNachtmusik_Score.pdf}},
   note = {Accessed: 2017-05-23}
@@ -121,15 +120,28 @@
 
 
 @misc{k160,
-  title = {String Quartet No.7 in E-flat major, K.160/159a},
+  title = {{String Quartet No.7 in E-flat major, K.160/159a}},
   author={Mozart, Wolfgang Amadeus},
   howpublished = {\url{http://ks.petruccimusiclibrary.org/files/imglnks/usimg/f/f1/IMSLP64127-PMLP05214-Mozart_Werke_Breitkopf_Serie_14_KV160.pdf}},
   note = {Accessed: 2017-05-23}
 }
 
 @misc{openscore,
-  title = {Introducing OpenScore},
+  title = {OpenScore},
   key = {openscore},
   howpublished = {\url{https://musescore.org/en/user/57401/blog/2017/01/11/introducing-openscore}},
   note = {Accessed: 2017-05-22}
 }
+
+@misc{m21,
+  title = {{Music21: A Toolkit for Computational Musicology}},
+  author={Cuthbert, Michael Scott},
+  howpublished = {\url{http://web.mit.edu/music21/}}
+}
+
+@misc{yeti,
+  title = {{Yeti Levenshtein Python Extension}},
+  author={Haapala, Antti},
+  howpublished = {\url{https://pypi.python.org/pypi/python-Levenshtein/0.12.0}}
+}
+
